用户视角页面火狐缩小板块错位问题

--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -66,7 +66,7 @@
     </div>
   </div>
   <div class="dui-layout-div"></div>
-  <div class="dui-layout-con left" style="border: 1px solid #eee;margin-left: 20px;margin-top: 20px;width: 878px;background: #fff">
+  <div class="dui-layout-con left" style="margin-left: 20px;margin-top: 20px;width: 878px;background: #fff">
     <div style="margin-top: 20px">
       <div style="">
           {% if userinfo.status == 1 %} {#离职顾问#}
