--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -55,7 +55,7 @@
     </div>
   </div>
   <div class="dui-layout-div"></div>
-  <div class="dui-layout-con left dui-box-shadow" style="border: 1px solid #eee;margin-left: 20px;margin-top: 20px;width: 878px;background: #fff">
+  <div class="dui-layout-con left dui-box-shadow" style="margin-left: 20px;margin-top: 20px;width: 878px;background: #fff">
     <div class="" style="margin-top: 20px">
       <div>
         {% import "widget2/community_nav/community_nav.html" as community_nav %}
