--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -142,7 +142,7 @@
                 &#xe651;
               {% endif %}  
               </i>点赞</span> 
-            <a  style="float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;" onclick="openchat_new('{{ userinfo.job_number}}')">立即咨询</a>
+            <a  style="float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;" onclick="openchat_new('{{ userinfo.new_job_number}}')">立即咨询</a>
         </div>
           {% endif %}
         <div class="article_tuijian">
