--- a/views/header_new.html
+++ b/views/header_new.html
@@ -18,11 +18,11 @@
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/base.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui.min.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui-append.min.css">
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/nodemain2.min.css">
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/nodemain2.min.css">
   <!--[if lt IE 9]>
   <script src="{{helper.cdnhost}}/dep/js/html5.js"></script>
   <![endif]-->
-  <script  src="{{helper.cdnhost}}/dep/js/jquery-11.1.js"></script>
+  <script  src="{{helper.cdnhost}}/dep/js/jquery-1.9.1.min.js"></script>
   <!--<script src="{{helper.cdnhost}}/dep/js/jquery.xdomainrequest.min.js"></script>-->
   <script src="{{helper.cdnhost}}/dep/js/jquery.cookie.js" ></script>
   <script src="{{helper.cdnhost}}/dep/js/dui.js"></script>
