--- a/views/act_form.html
+++ b/views/act_form.html
@@ -338,8 +338,8 @@
 <script>
   $(function () {
     var login_ss = null;
-    if($.cookie('login_ss') != undefined){
-      login_ss = JSON.parse($.cookie('login_ss'));
+    if(cookie('login_ss') != undefined){
+      login_ss = JSON.parse(cookie('login_ss'));
     }
     $("#gerenjieshao").on("keyup",function(){
 	  var strLength = $.trim($(this).val()).length;
@@ -380,7 +380,7 @@
 	    }
 	});
 	$("#gerenjieshao").on('focus',function(){
-		if($.cookie('login_ss') == undefined){
+		if(cookie('login_ss') == undefined){
 		  getlogin();
   	      return false;
 		}
