--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -106,8 +106,8 @@
 <script>
   $(function() {
     var login_ss = null;
-    if($.cookie('login_ss') != undefined){
-      login_ss = JSON.parse($.cookie('login_ss'));
+    if(cookie('login_ss') != undefined){
+      login_ss = JSON.parse(cookie('login_ss'));
     }
     window._bd_share_config = {
       "common": {
