--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -193,8 +193,8 @@
   <script>
     $(function(){
       var login_ss = null;
-      if($.cookie('login_ss') != undefined){
-        login_ss = JSON.parse($.cookie('login_ss'));
+      if(cookie('login_ss') != undefined){
+        login_ss = JSON.parse(cookie('login_ss'));
       }
       $('.banner-box-left .slider').xSlider({
           current: 0,
