--- a/views/center_message.html
+++ b/views/center_message.html
@@ -111,8 +111,8 @@
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
     $(function () {
-        if($.cookie('login_ss') != undefined){
-            login_ss = JSON.parse($.cookie('login_ss'));
+        if(cookie('login_ss') != undefined){
+            login_ss = JSON.parse(cookie('login_ss'));
         }
         $('.banner-box-left .slider').xSlider({
             //轮播图配置
