--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -272,8 +272,8 @@
             pagination: true
         });
         var login_ss = null;
-        if($.cookie('login_ss') != undefined){
-            login_ss = JSON.parse($.cookie('login_ss'));
+        if(cookie('login_ss') != undefined){
+            login_ss = JSON.parse(cookie('login_ss'));
         }
         //微信图片上传
         var params = {
