--- a/views/so_adviser_yimin.html
+++ b/views/so_adviser_yimin.html
@@ -134,7 +134,7 @@
             slidesPerGroup : 2,
           pagination: true
         });
-/*        var area = $.cookie('currentarea') ? $.cookie('currentarea') : 1;
+/*        var area = cookie('currentarea') ? cookie('currentarea') : 1;
         var keyword = $('#result-keyword').text();
         var load_page = $('#load-more-article').attr('data-cur_page')*1+1;
         function more_artice (art_list) {
