--- a/views/center_article.html
+++ b/views/center_article.html
@@ -165,8 +165,8 @@
   <script>
     $(function() {
         var login_ss = null;
-        if($.cookie('login_ss') != undefined){
-            login_ss = JSON.parse($.cookie('login_ss'));
+        if(cookie('login_ss') != undefined){
+            login_ss = JSON.parse(cookie('login_ss'));
         }
         $('.banner-box-left .slider').xSlider({
             //轮播图配置
