--- a/views/country_list.html
+++ b/views/country_list.html
@@ -360,7 +360,7 @@
           pagination: true
         });
 
-/*        var area = $.cookie('currentarea') ? $.cookie('currentarea') : 1;
+/*        var area = cookie('currentarea') ? cookie('currentarea') : 1;
         var keyword = $('#result-keyword').text();
         var load_page = $('#load-more-article').attr('data-cur_page')*1+1;
         function more_artice (art_list) {
