--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -224,8 +224,8 @@
   <script >
     $(function(){
         var login_ss = null; //获取用户信息
-        if($.cookie('login_ss') != undefined){
-            login_ss = JSON.parse($.cookie('login_ss'));
+        if(cookie('login_ss') != undefined){
+            login_ss = JSON.parse(cookie('login_ss'));
         }
         $('.banner-box-left .slider').xSlider({
             //轮播图配置
