--- a/views/header_new.html
+++ b/views/header_new.html
@@ -24,7 +24,7 @@
   <![endif]-->
   <script  src="{{helper.cdnhost}}/dep/js/jquery-1.9.1.min.js"></script>
   <!--<script src="{{helper.cdnhost}}/dep/js/jquery.xdomainrequest.min.js"></script>-->
-  <script src="{{helper.cdnhost}}/dep/js/jquery.cookie.js" ></script>
+  <script src="{{helper.cdnhost}}/dep/js/cookie.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/dui.js"></script>
   <script src="{{helper.cdnhost}}/assets/font/iconfont.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/json2.js" ></script>
