--- a/views/user_information.html
+++ b/views/user_information.html
@@ -146,8 +146,8 @@
 <script>
   $(document).ready(function () {
       var login_ss = null;
-      if($.cookie('login_ss') != undefined){
-          login_ss = JSON.parse($.cookie('login_ss'));
+      if(cookie('login_ss') != undefined){
+          login_ss = JSON.parse(cookie('login_ss'));
       }
       $('.banner-box-left .slider').xSlider({
           //轮播图配置
