--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -351,7 +351,7 @@
       dataType: "json",
       success: function(result){
         var iparea = result.data;
-        if(!$.cookie('currentarea')){
+        if(!cookie('currentarea')){
           console.log('sss');
           $('#zhezhaox').show();
           $('#zhezhaos').show();
@@ -363,7 +363,7 @@
         //正确
         $('#selByIp').on('click',function (e) {
           e.preventDefault();
-          $.cookie('currentarea', iparea, { path: "/",domain: js_api_config.domain});
+          cookie('currentarea', iparea, { path: "/",domain: js_api_config.domain});
           if (endFix) {
             window.location.href = fn.urlgen('branch_home','c='+ result.data)+'?'+endFix;
           }
@@ -381,7 +381,7 @@
       if (currentarea) {
         e.preventDefault();
       }
-      $.cookie('currentarea', currentarea, { path: "/",domain: js_api_config.domain});
+      cookie('currentarea', currentarea, { path: "/",domain: js_api_config.domain});
       if (endFix) {
         window.location.href = $(this).attr("href")+'?'+endFix;
       }
