--- a/views/about/about.html
+++ b/views/about/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/about.css">
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/about.css">
 </head>
 <body style="background: #f5f5f5;">
 {% include "widget/common_hide/common_hide.html"%}
