--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
-<style>
+<style type="text/css">
   .new-activity{
     padding:0 20px;
   }
