--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/activity_detail.css">
-<style>
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/activity_detail.css">
+<style type="text/css">
   /* .jjl-jiangzuo{
      position: relative;
      z-index: 3;
