--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
-<style>
+<style type="text/css">
   .voucher {
     width: 100%;
     position: absolute;
