--- a/views/about/employment.html
+++ b/views/about/employment.html
@@ -3,7 +3,7 @@
 <head>
 {% include "header_new.html" %}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<style>
+<style type="text/css">
   .job-list li span{
     float:right;
   }
