--- a/views/about/events.html
+++ b/views/about/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/about.css">
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/about.css">
 <!--
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/academy3.css"/>
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/corporate_events.css">
