--- a/views/about/schooltopic.html
+++ b/views/about/schooltopic.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/about.css">
-<style>
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/about.css">
+<style type="text/css">
 .new_nav_first .nav-right .search-type-box .search-type .search-type-text {
   font-size: 12px;
 }
