--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head lang="en"> 
+<html lang="en">
+<head > 
   {% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
   <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
-  <style>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
+  <style type="text/css">
     .list-h{
         height:130px;
     }
