--- a/views/advisor_acount.html
+++ b/views/advisor_acount.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head >
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css" >
-  <link href="{{helper.cdnhost}}/assets/css/widget/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-  <link href="{{helper.cdnhost}}/assets/css/widget/style.css?v=4.1.0" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/top.css" >
+  <link type="text/css" href="{{helper.cdnhost}}/assets/css/widget/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+  <link type="text/css" href="{{helper.cdnhost}}/assets/css/widget/style.css?v=4.1.0" rel="stylesheet">
   {% include "header_new.html" %}
   <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
   <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
