--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	{% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/article_detail.css" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/article_detail.css" >
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
