--- a/views/center_case.html
+++ b/views/center_case.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 {% include "header_new.html" %}
-    <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
-<style>
+    <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
+<style type="text/css">
     .right-cont{
         width: 878px;
         /*height: 1365px;*/
