--- a/views/center_main.html
+++ b/views/center_main.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 {% include "header_new.html" %}
-    <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
+    <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-    <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/upload_photo.css"/>
-<style>
+    <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/upload_photo.css"/>
+<style type="text/css">
     .pagination-box{
         float: left;
         position: relative;
