--- a/views/center_message.html
+++ b/views/center_message.html
@@ -5,7 +5,7 @@
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-<style>
+<style type="text/css">
     .right-title div{
         width: 115px;
         height: 40px;
