--- a/views/center_photo.html
+++ b/views/center_photo.html
@@ -5,8 +5,8 @@
  <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/upload_photo.css"/>
-<style>
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/upload_photo.css"/>
+<style type="text/css">
 	.rel-case-map{
 	 	width:100%;
 	 	height:130px;
