--- a/views/counsellor_personal.html
+++ b/views/counsellor_personal.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head >
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css" >
+  <link type="text/css" rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css" >
   {% include "header_new.html" %}
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-<style>
+<style type="text/css">
   .content_title{
     margin-top: 20px;margin-left: 20px;margin-bottom: 30px;background: #f3f3f3;width: 840px;height: 40px
   }
