--- a/views/country_list.html
+++ b/views/country_list.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 {% include "header_new.html" %}
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/search_result.css"/>
-<style>
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/search_result.css"/>
+<style type="text/css">
     .pagination-box{
         float: left;
         position: relative;
