--- a/views/error.html
+++ b/views/error.html
@@ -6,8 +6,8 @@
 <head>
 {% include "header_new.html" %}
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/error.css">
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/branch_home_page.css" >
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/error.css">
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/branch_home_page.css" >
 </head>
 <body>
 {% include "widget/common_hide/common_hide.html"%}
