--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head >
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css"/>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/layer.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/top.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/custom.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/layer.css"/>
   {% include "header_new.html" %}
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
-  <style>
+  <style type="text/css">
     .register_nei_title {
       font-size: 18px;
       color: #C13232;
