--- a/views/login/register.html
+++ b/views/login/register.html
@@ -3,15 +3,15 @@
 <head>
 
   {% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/top.css"/>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/top.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
   
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0" >
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css">
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/custom.css">
 
   <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
-  <style>
+  <style type="text/css">
     .xy{
       width: 650px;
       height: 590px;
