--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 {% include "header_new.html" %}
-<style>
+<style type="text/css">
 .wrap-con  {
   -webkit-appearance: radio;
   -moz-appearance: radio;
