--- a/views/about/culture_detail.html
+++ b/views/about/culture_detail.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 {% include "header_new.html" %}
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/logo.css" >
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/logo.css" >
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
-<link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
 <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
-<style>
+<style type="text/css">
   .xuanze-chengshi p a:last-child{
     margin-right: 0;
   }
