--- a/views/act_form.html
+++ b/views/act_form.html
@@ -5,8 +5,8 @@
  <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/about.css">
-<style>
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/about.css">
+<style type="text/css">
  .act_form {
    width: 1200px;
    margin: 0 auto;
