--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head >
   {% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
   <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
-  <style>
+  <style type="text/css">
     .canzanps p {
       font-size: 14px;
       line-height: 26px;
