--- a/views/adviser_photo_p.html
+++ b/views/adviser_photo_p.html
@@ -1,11 +1,11 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     {% include "header_new.html" %}
-    <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
+    <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
     <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
-    <style>
+    <style type="text/css">
 		.rel-case-map{
 		 	width:100%;
 		 	height:130px;
