--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
 	{% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/article_detail.css" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/article_detail.css" >
 </head>
 <body style="background:#f5f5f5;">
 {% include "widget/common_hide/common_hide.html"%}
