--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 {% include "header_new.html" %}
-    <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
+    <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget2/bottom_comment.css" >
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-<style>
+<style type="text/css">
     .right-cont{
         width: 878px;
         /*height: 1365px;*/
