--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -5,7 +5,7 @@
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
-<style>
+<style type="text/css">
     .pagination-box{
         float: left;
         position: relative;
