--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -5,7 +5,7 @@
 <!--[if lt IE 10]>
 <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
 <![endif]-->
-<style>
+<style type="text/css">
     .content_title{
         margin-top: 20px;margin-left: 20px;margin-bottom: 30px;background: #f3f3f3;width: 840px;height: 40px
     }
