--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   {% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/release_article.css" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/release_article.css" >
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
