--- a/views/edit_case.html
+++ b/views/edit_case.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
  {% include "header_new.html" %}
- <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/edit_case.css" >
+ <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/edit_case.css" >
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
   <![endif]-->
