--- a/views/login/login.html
+++ b/views/login/login.html
@@ -3,10 +3,10 @@
 <head>
 
   {% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
   
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
-  <style>
+  <style type="text/css">
     .inputtext_isr{
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
