--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -3,11 +3,11 @@
 <head>
 
   {% include "header_new.html" %}
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
   
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/custom.css"/>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
-  <style>
+  <style type="text/css">
     .inputtext_isr{
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
