--- a/views/login/oauth.html
+++ b/views/login/oauth.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head >
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0" rel="stylesheet">
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/layer.css"/>
   {% include "header_new.html" %}
-  <script src="{{helper.cdnhost}}/dep/js/layer.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
-  <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
 </head>
 <body>
 {% include "widget/top/top.html" %}
