--- a/views/so_article_yimin.html
+++ b/views/so_article_yimin.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 {% include "header_new.html" %}
-<link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/search_result.css"/>
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
+<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/search_result.css"/>
 <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
-<style>
+<style type="text/css">
     .pagination-box{
         float: left;
         position: relative;
