--- a/views/user_information.html
+++ b/views/user_information.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head >
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6"/>
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/bootstrap.min.css?v=3.3.6"/>
   {% include "header_new.html" %}
   <!--[if lt IE 10]>
   <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
@@ -11,7 +11,7 @@
   <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
   <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
 
-  <style>
+  <style type="text/css">
     .content_title{
       margin-top: 20px;margin-left: 20px;margin-bottom: 30px;background: #f3f3f3;width: 840px;height: 40px;
     }
