--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -1,6 +1,6 @@
 <div class="top" style="position:relative;z-index: 1002;">
 </div>
-<style>
+<style type="text/css">
   .l_u{
     width: 421px;
     height: 434px;
